--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Data investigations
-subtitle: Learn about science, data, and AI
+subtitle: Science, data, and AI
 use-site-title: true
 ---
 
